--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "peterkacinec/simple-table",
+    "version": "1.0.0",
     "authors": [
         {
             "name": "Peter Kacinec",
